sql/src/test/BugTracker/Tests/drop_schema_crash.SF-1504794.stable.err
stderr of test 'drop_schema_crash.SF-1504794` in directory 'src/test/BugTracker` itself:


# 11:12:03 >  
# 11:12:03 >  Mtimeout -timeout 300 Mserver "--config=/ufs/niels/scratch/rc/Linux-x86_64/etc/MonetDB.conf" --debug=10 --set "monet_mod_path=/ufs/niels/scratch/rc/Linux-x86_64/lib/MonetDB:/ufs/niels/scratch/rc/Linux-x86_64/lib/bin" --set "gdk_dbfarm=/ufs/niels/scratch/rc/Linux-x86_64/var/MonetDB/dbfarm" --set "sql_logdir=/ufs/niels/scratch/rc/Linux-x86_64/var/MonetDB/log" --set mapi_port=35369 --set monet_prompt= --trace "--dbname=mTests_src_test_BugTracker" --dbinit="module(sql_server); sql_server_start();" ; echo ; echo Over..
# 11:12:03 >  

# builtin opt 	config = ${prefix}/etc/MonetDB.conf
# builtin opt 	gdk_arch = 64bitx86_64-redhat-linux-gnu
# builtin opt 	gdk_version = 4.12.0_rc1
# builtin opt 	monet_pid = 4760
# builtin opt 	prefix = /ufs/niels/scratch/rc/Linux-x86_64
# builtin opt 	exec_prefix = ${prefix}
# builtin opt 	gdk_dbname = tst
# builtin opt 	gdk_dbfarm = ${prefix}/var/MonetDB
# builtin opt 	gdk_debug = 8
# builtin opt 	gdk_mem_bigsize = 1048576
# builtin opt 	gdk_vm_minsize = 137438953472
# builtin opt 	gdk_alloc_map = yes
# builtin opt 	monet_admin = adm
# builtin opt 	monet_prompt = >
# builtin opt 	monet_welcome = yes
# builtin opt 	monet_mod_path = ${exec_prefix}/lib/MonetDB:${exec_prefix}/lib/bin
# builtin opt 	monet_daemon = yes
# builtin opt 	host = localhost
# builtin opt 	mapi_port = 50000
# builtin opt 	mapi_noheaders = no
# builtin opt 	mapi_debug = 0
# builtin opt 	mapi_clients = 2
# builtin opt 	sql_debug = 0
# builtin opt 	sql_logdir = ${prefix}/var/MonetDB/log
# config opt 	prefix = /ufs/niels/scratch/rc/Linux-x86_64
# config opt 	exec_prefix = ${prefix}
# config opt 	gdk_dbfarm = ${prefix}/var/MonetDB/dbfarm
# config opt 	gdk_dbname = demo
# config opt 	gdk_alloc_map = no
# config opt 	gdk_embedded = no
# config opt 	gdk_debug = 0
# config opt 	monet_admin = adm
# config opt 	monet_prompt = MonetDB>
# config opt 	monet_welcome = yes
# config opt 	monet_mod_path = ${exec_prefix}/lib/MonetDB:${exec_prefix}/lib/bin
# config opt 	monet_daemon = no
# config opt 	mapi_port = 50000
# config opt 	mapi_debug = 0
# config opt 	sql_debug = 0
# config opt 	sql_logdir = ${prefix}/var/MonetDB/log
# config opt 	pf_httpd_port = 48080
# config opt 	xquery_output = dm
# config opt 	xquery_cacheMB = 100
# cmdline opt 	config = /ufs/niels/scratch/rc/Linux-x86_64/etc/MonetDB.conf
# cmdline opt 	gdk_debug = 10
# cmdline opt 	monet_mod_path = /ufs/niels/scratch/rc/Linux-x86_64/lib/MonetDB:/ufs/niels/scratch/rc/Linux-x86_64/lib/bin
# cmdline opt 	gdk_dbfarm = /ufs/niels/scratch/rc/Linux-x86_64/var/MonetDB/dbfarm
# cmdline opt 	sql_logdir = /ufs/niels/scratch/rc/Linux-x86_64/var/MonetDB/log
# cmdline opt 	mapi_port = 35369
# cmdline opt 	monet_prompt = 
# cmdline opt 	gdk_dbname = mTests_src_test_BugTracker

# 11:12:03 >  
# 11:12:03 >  Mtimeout -timeout 180 ./drop_schema_crash.SF-1504794.SQL drop_schema_crash.SF-1504794 
# 11:12:03 >  


# 11:12:03 >  
# 11:12:03 >  Mtimeout -timeout 60 java -jar /net/koala.ins.cwi.nl/export/scratch0/niels/rc/Linux-x86_64/build-sql/src/jdbc/jdbcclient-1.4.jar -h localhost -p 35369 -d mTests_src_test_BugTracker -f ../../../../../../../..//scratch1/niels/rc/sql/src/test/BugTracker/Tests/drop_schema_crash.SF-1504794-data.sql
# 11:12:03 >  

Error on line 5: DROP SCHEMA: unable to drop schema 'dbtapestry' (there are database objects which depend on it

# 11:12:03 >  
# 11:12:03 >  Done.
# 11:12:03 >  

